--- a/app/routes/_artworks+/artworks.index.css
+++ b/app/routes/_artworks+/artworks.index.css
@@ -49,7 +49,6 @@ main {
 }
 
 form > div > label:nth-child(3) {
-	font-size: 1.5rem !important;
 }
 
 input[type='radio']:checked + svg {
